# FranticMatch

./: CMakeLists.txt  README.md
.github/workflows/: msbuild.yml
FranticMatch/: Files.cmake  FranticMatch.hpp
FranticMatch_TestGame/: Files.cmake
FranticMatch_TestGame/Source/: Main.cpp
FranticMatch_TestGame/Source/Game/: Game.cpp  Game.hpp
FranticMatch_TestGame/Source/Game/ColourfulMisket/: ColourfulMisket.cpp  ColourfulMisket.hpp
